--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="you_might_be_interested_in">You might be interested in</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="textview">TextView</string>
+    <string name="todo">TODO</string>
+    <string name="apply">APPLY</string>
 </resources>
