Added 2 Fragment Pages for Employee and Organization Register
RegisterPageFragment2 - Employee
RegisterPageFragment3- Organization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="sign_up_as">Sign Up As</string>
     <string name="organization">Organization</string>
     <string name="employee">Employee</string>
+    <string name="org_name">Organization Name</string>
 
 
     //Profile
