--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,8 +122,12 @@
     <string name="job_provided_tag">Job Provided</string>
     <string name="address_tag">Address</string>
     <string name="reject">Reject</string>
-    <string name="Congrate">Congratulations, you have been admitted</string>
+    <string name="Congrate">Congratulations, you are hired</string>
     <string name="Congrate_detail">Congratulations. Based on your previous job request, we think you are the perfect candidate for this job. We urge you to contact us as soon as possible to ensure that this job still exists.</string>
+    <string name="rejected">You have been rejected.</string>
+    <string name="reject_detail">Feel sorry. It is a pity that we cannot hire you because your qualifications do not meet our expectations. I hope you can find the job you want as soon as possible.</string>
+    <string name="request_job">A new job hire request from job seeker is sent to you. Please do the response as fast as possible.</string>
+    <string name="request_job_title">New job hire request</string>
 
     <string-array name="areaoptions">
         <item>Alor Setar</item>
