organization home detail design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,7 @@
     <string name="request_job_title">New job hire request</string>
     <string name="backButton">backButton</string>
     <string name="JobDescription">Description</string>
+    <string name="job_image">Job Image:</string>
 
     <string-array name="areaoptions">
         <item>Alor Setar</item>
