minor change + data track

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,7 @@
     <string name="backButton">backButton</string>
 
     <string-array name="areaoptions">
+        <item></item>
         <item>Alor Setar</item>
         <item>Batu Gajah</item>
         <item>Batu Pahat</item>
@@ -177,6 +178,7 @@
     </string-array>
 
     <string-array name="joboptions">
+        <item></item>
         <item>Software Engineer</item>
         <item>Data Scientist</item>
         <item>Marketing Manager</item>
